app/src/app.css
/* ... */
.splitpanes.modern-theme .splitpanes__splitter:before,
.splitpanes.modern-theme .splitpanes__splitter:after {
	content: ' ';
	position: absolute;
	left: 0;
	top: 0;
	bottom: 0;
	transition: opacity 0.4s;
	background-color: var(--color-gray-200);
	opacity: 0.4;
	border-radius: 4px;
	z-index: 1;
	cursor: ew-resize;
}

@media (max-width: 768px) {
	.splitpanes.modern-theme .splitpanes__splitter {
		height: 6px;
		cursor: ns-resize;
	}

	.splitpanes.modern-theme .splitpanes__splitter:before,
	.splitpanes.modern-theme .splitpanes__splitter:after {
		left: 0;
		right: 0;
		height: 2px;
		width: 100%;
		cursor: ns-resize;
	}
}

.splitpanes.modern-theme .splitpanes__splitter:hover:before,
.splitpanes.modern-theme .splitpanes__splitter:hover:after {
	opacity: 1;
	background-color: var(--color-gray-500);
	cursor: ew-resize;
	pointer-events: all;
}

.splitpanes.modern-theme .splitpanes__splitter.splitpanes__splitter__active {
	z-index: 2;
	/* Fix an issue of overlap fighting with a near hovered splitter */
	cursor: ew-resize;
}

.modern-theme.splitpanes--vertical > .splitpanes__splitter:before {
	left: -2px;
	right: -2px;
	cursor: ew-resize;
}

.splitpanes.no-splitter .splitpanes__splitter {
	position: relative;
}

.no-splitter.splitpanes--horizontal > .splitpanes__splitter:before {
	width: 0.125rem;
	pointer-events: none;
	cursor: none;
}

.no-splitter.splitpanes--vertical > .splitpanes__splitter:before {
	height: 0.125rem;
	pointer-events: none;
	cursor: none;
}

@media print {
	nav,
	header[role='banner'],
	.commands,
	.bottom-actions-bar,
	.is-visible-on-hover,
	.print-button,
	aside:has(> button),
	.details-section:has(#properties-label),
	.details-section--inline-help {
		display: none !important;
	}

	.app-wrapper {
		height: auto;
		overflow: visible;
	}

	.main-with-header-wrapper {
		overflow: visible;
	}

	main {
		overflow: visible !important;
	}

	.content-details {
		overflow: visible;
		height: auto;
	}

	[contenteditable] {
		outline: none !important;
		border: none !important;
	}

	.details {
		--details-padding-left: 0;
		--details-padding-right: 0;

		min-width: 100%;
		padding: 1rem 0;
	}

	.splitpanes.splitpanes--vertical {
		flex-direction: column;
	}

	.splitpanes .splitpanes__pane {
		width: 100% !important;
		height: auto !important;
	}

	.badge {
		padding-left: 0;
		padding-right: 0;
	}

	.splitpanes__splitter {
		display: none !important;
	}

	.splitpanes__pane--wrap img,
	img.cover {
		max-width: 50% !important;
	}
}

